# Parallele

./: .gitignore  CMakeLists.txt  README.md
PS1/: CMakeLists.txt  ClLoader.cpp  ClLoader.h  README.md  main.cpp  matrix.c
PS1-matrix-mul/: matrix_mul_omp.c
PS2/: CMakeLists.txt  ClLoader.cpp  ClLoader.h  README.md  comparison_sheet.ods  main.cpp  matrix.c
PS3/: CMakeLists.txt  main.cpp
PS3-1/: CMakeLists.txt  comparison_sheet.ods  jacobi.c  main.cpp
PS3-2/: CMakeLists.txt  comparison_sheet.ods  jacobi.c  main.cpp
PS3-gut-aber-falsch/PS3-1/: CMakeLists.txt
PS3-gut-aber-falsch/PS3-2/: jacobi.c
PS3-jacobi-matrix-sollver/PS3-2/: CMakeLists.txt
PS3-jacobi-matrix-solver/PS3-1/: main.cpp
PS3-jacobi-matrix-solver/PS3-2/: main.cpp
PS5/: CMakeLists.txt  main.cpp  reduction.c  reduction.cl
PS6/: CMakeLists.txt  auto_levels.c  auto_levels.cl  main.cpp
PS6/serial/: auto_levels.c
PS7/: CMakeLists.txt  Search.cpp  Search.h  main.cpp  search.cl  search_cl.cpp
PS7/serial/: search_serial.c
PS8/: CMakeLists.txt  list_gen.cpp  list_generator.h  list_sort.cpp  serial_count_sort.h
helloworld/: CMakeLists.txt  hello.c  main.cpp
include/: ClLoader.cpp  ClLoader.h  ClWrapper.cpp  ClWrapper.h  cl.hpp  people.h  time_ms.h
krempl/PS3-jacobi-matrix-solver/PS3-1/: main.cpp
krempl/PS3-jacobi-matrix-solver/PS3-2/: main.cpp
